# RaTeX

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  README.zh-CN.md  roadmap.md
.claude/skills/render-bench/: SKILL.md
.github/workflows/: ci.yml  release-android.yml  release-cli.yml  release-crates.yml  release-ios.yml  release-jvm.yml  release-react-native.yml
crates/ratex-font-loader/: Cargo.toml
crates/ratex-font-loader/src/: lib.rs  outline_cache.rs
crates/ratex-font/src/: math_alpha.rs
crates/ratex-font/src/data/: symbols_data.rs
crates/ratex-layout/src/: engine.rs  layout_box.rs  to_display.rs
crates/ratex-layout/tests/: layout_vs_katex.rs
crates/ratex-parser/src/: environments.rs  error.rs  macro_expander.rs  parse_node.rs  parser.rs  tests.rs
crates/ratex-parser/src/functions/: bussproofs.rs  enclose.rs  htmlmathml.rs  mod.rs  op.rs
crates/ratex-parser/src/mhchem/: actions.rs  buffer.rs  engine.rs  patterns.rs
crates/ratex-pdf/: Cargo.toml
crates/ratex-pdf/src/: fonts.rs  lib.rs  renderer.rs
crates/ratex-pdf/tests/: smoke.rs
crates/ratex-render/: Cargo.toml
crates/ratex-render/src/: main.rs  renderer.rs
crates/ratex-render/tests/: bench_render.rs  font_cache_timing.rs  golden_test.rs  phase_breakdown.rs  transparent_background.rs
crates/ratex-svg/: Cargo.toml
crates/ratex-svg/src/: lib.rs  standalone.rs
crates/ratex-types/src/: color.rs  display_item.rs
crates/ratex-unicode-font/: Cargo.toml
crates/ratex-unicode-font/src/: emoji_raster.rs  lib.rs
crates/ratex-wasm/src/: lib.rs
demo/: support_table.html
demo/android/: README.md
demo/react-native/: .gitignore  App.tsx  README.md  jest.config.js  package-lock.json  package.json  react-native.config.js
demo/react-native-expo/: App.tsx  app.json  package-lock.json  package.json
demo/react-native/android/app/src/main/java/com/ratexdemo/: MainApplication.kt
demo/react-native/macos/: Podfile
demo/react-native/macos/RaTeXDemo-macOS/: AppDelegate.mm  RaTeXComponentRegistration.m
demo/react-native/macos/RaTeXDemo-macOS/Base.lproj/: Main.storyboard
demo/react-native/macos/RaTeXDemo.xcodeproj/: project.pbxproj
demo/react-native/macos/RaTeXDemo.xcodeproj/xcshareddata/xcschemes/: RaTeXDemo-macOS.xcscheme
demo/react-native/macos/RaTeXDemo.xcworkspace/: contents.xcworkspacedata
demo/web/: support_table.html
docs/: PROJECT_STRUCTURE.md  binding-architecture.md
scripts/: build-apple-xcframework.sh  set-version.sh  verify-xcframework-slices.sh
skills/render-bench/: SKILL.md
tests/golden/: test_cases.txt
tools/: generate_website_formulas.mjs
tools/golden_compare/: generate_reference.mjs
website/: .gitignore
website/public/data/: math.json  prooftree.json
website/src/components/: SiteHeader.astro
website/src/i18n/locales/: en.ts  zh.ts
website/src/layouts/: BaseLayout.astro
website/src/pages/: demo.astro  index.astro  proof-trees.astro
website/src/pages/demo/: support-table.astro
website/src/pages/zh/: proof-trees.astro
