[package]
name = "ratex-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "PDF export for RaTeX DisplayList using pdf-writer"

[dependencies]
ratex-types = { workspace = true }
ratex-font  = { workspace = true }
ratex-font-loader = { workspace = true }
pdf-writer  = "0.14"
subsetter   = "0.2"
skrifa      = "0.42"
ab_glyph    = "0.2"
miniz_oxide = "0.9"
png = "0.17"
ratex-unicode-font = { workspace = true }

ratex-layout      = { workspace = true, optional = true }
ratex-parser      = { workspace = true, optional = true }
ratex-katex-fonts = { workspace = true, optional = true }

[features]
default = []
embed-fonts = ["dep:ratex-katex-fonts", "ratex-font-loader/embed-fonts"]
cli = ["dep:ratex-layout", "dep:ratex-parser"]

[[bin]]
name = "render-pdf"
path = "src/bin/render_pdf.rs"
required-features = ["cli"]

[dev-dependencies]
ratex-layout = { workspace = true }
ratex-parser = { workspace = true }
