[package]
name = "ratex-unicode-font"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "System Unicode font discovery for RaTeX fallback rendering"

[dependencies]
fontdb = { version = "0.23", features = ["std"] }
system-fonts = "0.1"
ttf-parser = "0.25"
